Outliner - Show all inside in disabled collection crash Blender #65448

Closed
opened 2019-06-03 14:08:51 +02:00 by YAFU · 4 comments

System Information
Operating system: Linux-5.0.1-050001-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.14

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-02 11:23, hash: 8d1666fc6d
Worked: (optional)

Short description of error
"Show all inside" on disabled collection in outliner crash Blender.

# Blender 2.80 (sub 74), Commit date: 2019-06-02 11:23, Hash 8d1666fc6de1

# backtrace
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(BLI_system_backtrace+0x33) [0x55bea0ccf553]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0xc741d0) [0x55bea0aa81d0]
/lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7fd613402f20]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0xd1171c) [0x55bea0b4571c]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(BKE_layer_collection_set_visible+0x5d) [0x55bea0b45e7d]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0x196d6e1) [0x55bea17a16e1]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0x1074597) [0x55bea0ea8597]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0x1074b30) [0x55bea0ea8b30]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(WM_operator_name_call_ptr+0x1a) [0x55bea0ea8f9a]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0x15fa93b) [0x55bea142e93b]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0x160aef9) [0x55bea143eef9]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0x10776df) [0x55bea0eab6df]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0x107923c) [0x55bea0ead23c]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(wm_event_do_handlers+0x279) [0x55bea0ead879]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(WM_main+0x20) [0x55bea0ea3740]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(main+0x33d) [0x55bea0a815dd]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7fd6133e5b97]
/media/disk/@Blender_Git/build_linux_2.8/bin/blender(_start+0x2a) [0x55bea0aa470a]

Exact steps for others to reproduce the error
Open the .blend file:
Show all inside.blend
In outliner right click on grayed out/disabled collection and select Visibility > Show all inside
Blender crash.

**System Information** Operating system: Linux-5.0.1-050001-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.14 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-02 11:23, hash: `8d1666fc6d` Worked: (optional) **Short description of error** "Show all inside" on disabled collection in outliner crash Blender. ``` # Blender 2.80 (sub 74), Commit date: 2019-06-02 11:23, Hash 8d1666fc6de1 # backtrace /media/disk/@Blender_Git/build_linux_2.8/bin/blender(BLI_system_backtrace+0x33) [0x55bea0ccf553] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0xc741d0) [0x55bea0aa81d0] /lib/x86_64-linux-gnu/libc.so.6(+0x3ef20) [0x7fd613402f20] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0xd1171c) [0x55bea0b4571c] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(BKE_layer_collection_set_visible+0x5d) [0x55bea0b45e7d] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0x196d6e1) [0x55bea17a16e1] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0x1074597) [0x55bea0ea8597] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0x1074b30) [0x55bea0ea8b30] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(WM_operator_name_call_ptr+0x1a) [0x55bea0ea8f9a] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0x15fa93b) [0x55bea142e93b] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0x160aef9) [0x55bea143eef9] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0x10776df) [0x55bea0eab6df] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(+0x107923c) [0x55bea0ead23c] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(wm_event_do_handlers+0x279) [0x55bea0ead879] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(WM_main+0x20) [0x55bea0ea3740] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(main+0x33d) [0x55bea0a815dd] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xe7) [0x7fd6133e5b97] /media/disk/@Blender_Git/build_linux_2.8/bin/blender(_start+0x2a) [0x55bea0aa470a] ``` **Exact steps for others to reproduce the error** Open the .blend file: [Show all inside.blend](https://archive.blender.org/developer/F7084604/Show_all_inside.blend) In outliner right click on grayed out/disabled collection and select Visibility > Show all inside Blender crash.
Author

Added subscriber: @YAFU

Added subscriber: @YAFU
Member

Added subscriber: @dfelinto

Added subscriber: @dfelinto

This issue was referenced by c39a8657be

This issue was referenced by c39a8657be6d1096154222b87358dde8a8054ff1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65448
No description provided.