Fix T65448 - Outliner - Show all inside in disabled collection crash